test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_read_channel_no_arguments.draco
proc main() void : read(chan;); corp;
